fix layout bug in mobile welcome page

--- a/frontend/src/app/view/radiolearn-welcome/radiolearn-welcome.component.scss
+++ b/frontend/src/app/view/radiolearn-welcome/radiolearn-welcome.component.scss
@@ -1,5 +1,5 @@
 .header {
-  padding: 50px 25%;
+  padding: 20px;
   align-items: center;
   text-align: center;
   background-color: #673ab7;
@@ -20,8 +20,10 @@
 }
 
 .text-container {
-  text-align: justify;
+  text-align: initial;
+  word-wrap: break-word;
   margin-top: 20px;
+  padding: 0 30px;
 }
 
 .img-container {
